# swagger.json
@@ -122,6 +122,22 @@
             "description": "Input error, all fields must be filled"
           }
         }
+      },
+      "get": {
+        "description": "Gets the chats a user is part of",
+        "produces": [ "application/json" ],
+        "parameters": [ ],
+        "responses": {
+          "200": {
+            "description": "Successfully returned chats",
+            "schema": {
+              "type": "array",
+              "items": {
+                "schema": { "$ref": "#/definitions/Chat" }
+              }
+            }
+          }
+        }
       }
     },
     "/api/chat/{chat_id}": {
@@ -130,13 +146,18 @@
         "produces": [ "application/json" ],
         "parameters": [
           {
+            "in": "path",
+            "name": "chat_id",
+            "type": "number",
+            "required": true
+          },
+          {
             "in": "body",
             "name": "message",
             "schema": {
               "type": "object",
-              "required": [ "chat_id", "username", "message_text" ],
+              "required": [ "username", "message_text" ],
               "properties": {
-                "chat_id": { "type": "number" },
                 "username": { "type": "string" },
                 "message_text" : { "type": "string" }
               }
@@ -152,6 +173,35 @@
           },
           "422": {
             "description": "Input error, all fields must be filled"
+          }
+        }
+      },
+      "get": {
+        "description": "Gets the users in a chat",
+        "produces": [ "application/json" ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "chat_id",
+            "type": "number",
+            "required": true
+          },
+          {
+            "in": "query",
+            "name": "start",
+            "type": "number",
+            "required": false
+          },
+          {
+            "in": "query",
+            "name": "limit",
+            "type": "number",
+            "required": false
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully"
           }
         }
       }
